--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+board_build.filesystem = littlefs
+monitor_speed = 9600
 
 lib_deps =
     WiFi
@@ -21,4 +23,3 @@ lib_deps =
     FastLED
     Adafruit NeoPixel
 
-monitor_speed = 9600
