--- a/platformio.ini
+++ b/platformio.ini
@@ -12,15 +12,16 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-board_build.filesystem = littlefs
-monitor_speed = 9600
-
-lib_deps =
+build_flags = 
+    -D LED_BUILTIN=2
+monitor_speed = 115200
+lib_deps = 
     WiFi
     ESP Async WebServer
-    littlefs
+    LittleFS_esp32
     ArduinoJson
     AsyncTCP
     FastLED
     Adafruit NeoPixel
+board_build.filesystem = littlefs
 
