--- a/platformio.ini
+++ b/platformio.ini
@@ -12,16 +12,16 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-build_flags = 
-    -D LED_BUILTIN=2
 monitor_speed = 115200
+board_build.filesystem = littlefs
 lib_deps = 
     WiFi
     ESP Async WebServer
-    LittleFS_esp32
     ArduinoJson
     AsyncTCP
     FastLED
     Adafruit NeoPixel
-board_build.filesystem = littlefs
+    littlefs
+
+
 
