--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,6 @@ lib_deps =
     FastLED
     Adafruit NeoPixel
     littlefs
-    Adafruit_GFX
-    dafruit_NeoMatrix
-
-
+    adafruit/Adafruit GFX Library
+    majicDesigns/MD_Parola
+    majicDesigns/MD_MAX72XX
