--- a/platformio.ini
+++ b/platformio.ini
@@ -15,14 +15,13 @@ framework = arduino
 monitor_speed = 115200
 
 board_build.filesystem = littlefs
+
 lib_deps = 
-    WiFi
     ESP Async WebServer
-    ArduinoJson
     AsyncTCP
+    ArduinoJson
     FastLED
     Adafruit NeoPixel
-    littlefs
-    adafruit/Adafruit GFX Library
+    Adafruit GFX Library
     majicDesigns/MD_Parola
     majicDesigns/MD_MAX72XX
